# kwebappmanager

./: .gitignore  CMakeLists.txt  README.md
data/: CMakeLists.txt  org.kde.kwebappmanager.desktop
icons/: CMakeLists.txt
src/: CMakeLists.txt  addpwadialog.cpp  addpwadialog.h  kwebappmanagerui.rc  main.cpp  mainwindow.cpp  mainwindow.h  pwamanager.cpp  pwamanager.h  pwawindow.cpp  pwawindow.h
